fix: keep drop shadow from overlapping outside the page body

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
 
 .speech {
     margin-left: 50px;
+    margin-right: 7px;
     padding: 25px;
     border: 2px solid var(--gray-color);
     font-family: var(--speech-font);
